--- a/index.html
+++ b/index.html
@@ -204,6 +204,133 @@
             </div>
         </div>
     </div>
+
+    <div class="product-area">
+        <div class="container">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">NEW</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">TOP</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">FEATURED</button>
+                </li>
+              </ul>
+              <div class="tab-content" id="pills-tabContent">
+
+                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-3 col-6">
+
+                            <div class="product-single-box">
+                                <div class="prod-image">
+                                    <a href="#">
+                                        <img src="asset/images/product-image/1.jpg" alt="" class="img-fluid">
+                                        <img src="asset/images/product-image/2.jpg" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="prod-name">
+                                    <a href="#"><b>Shawl for Women (Large)- 54</b></a>
+                                </div>
+                                <div class="prod-price">
+                                    <span>৳ 2990/-</span>
+                                </div>
+                                <div class="cart-btn">
+                                    <a href="#" class="cart-btn-l">
+                                        <span class="cart-t">Add To Cart</span>
+                                        <span uk-icon="cart" id="cart-i"></span>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-6">
+
+                            <div class="product-single-box">
+                                <div class="prod-image">
+                                    <a href="#">
+                                        <img src="asset/images/product-image/1.jpg" alt="" class="img-fluid">
+                                        <img src="asset/images/product-image/2.jpg" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="prod-name">
+                                    <a href="#"><b>Shawl for Women (Large)- 54</b></a>
+                                </div>
+                                <div class="prod-price">
+                                    <span>৳ 2990/-</span>
+                                </div>
+                                <div class="cart-btn">
+                                    <a href="#" class="cart-btn-l">
+                                        <span class="cart-t">Add To Cart</span>
+                                        <span uk-icon="cart" id="cart-i"></span>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-6">
+
+                            <div class="product-single-box">
+                                <div class="prod-image">
+                                    <a href="#">
+                                        <img src="asset/images/product-image/1.jpg" alt="" class="img-fluid">
+                                        <img src="asset/images/product-image/2.jpg" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="prod-name">
+                                    <a href="#"><b>Shawl for Women (Large)- 54</b></a>
+                                </div>
+                                <div class="prod-price">
+                                    <span>৳ 2990/-</span>
+                                </div>
+                                <div class="cart-btn">
+                                    <a href="#" class="cart-btn-l">
+                                        <span class="cart-t">Add To Cart</span>
+                                        <span uk-icon="cart" id="cart-i"></span>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-6">
+
+                            <div class="product-single-box">
+                                <div class="prod-image">
+                                    <a href="#">
+                                        <img src="asset/images/product-image/1.jpg" alt="" class="img-fluid">
+                                        <img src="asset/images/product-image/2.jpg" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="prod-name">
+                                    <a href="#"><b>Shawl for Women (Large)- 54</b></a>
+                                </div>
+                                <div class="prod-price">
+                                    <span>৳ 2990/-</span>
+                                </div>
+                                <div class="cart-btn">
+                                    <a href="#" class="cart-btn-l">
+                                        <span class="cart-t">Add To Cart</span>
+                                        <span uk-icon="cart" id="cart-i"></span>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+
+                </div>
+
+                <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">
+
+                </div>
+              </div>
+        </div>
+    </div>
     
 
     <!-- UIkit JS -->
