--- a/index.html
+++ b/index.html
@@ -577,6 +577,65 @@
               </div>
         </div>
     </div>
+
+
+    <footer>
+        <div class="footer-section mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="footer-logo">
+                            <img src="asset/images/logo.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="footer-div-title">
+                            <b>Contact Us</b>
+                        </div>
+                        <div class="contact-details">
+                            <li><span uk-icon="location"></span> <span>Shop-3/1, 2nd Floor (৩য় তলা), Eastern Plaza, Hatirpool, Dhaka</span></li>
+                            <li><span uk-icon="receiver"></span> <span>+880 1575434262</span></li>
+                            <li><span uk-icon="mail"></span> <span>info@sbit.com.bd</span></li>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="footer-div-title">
+                            <b>Follow Us</b>
+                        </div>
+                        <div class="follow-details">
+                            <li><a href="#"><span uk-icon="facebook"></span></a></li>
+                            <li><a href="#"><span uk-icon="whatsapp"></span></a></li>
+                            <li><a href="#"><span uk-icon="instagram"></span></a></li>
+                            <li><a href="#"><span uk-icon="linkedin"></span></a></li>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="footer-div-title">
+                            <b>Usefull Links</b>
+                        </div>
+                        <div class="useful-links">
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Terms & Condition</a></li>
+                            <li><a href="#">About Us</a></li>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pay-method">
+                <div class="row">
+                    <div class="col-lg-6 col-12">
+                        <span style="font-size: 11px;">Copyright &copy; 2019 - 2022 believerssign.com | All Rights Reserved</span>
+                    </div>
+                    <div class="col-lg-6 col-12">
+                        <div class="pay-method-image text-right">
+                            <img src="asset/images/payment.webp" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 
     <!-- UIkit JS -->
